# xm_ros_workspace

./: README.md
hokuyo_source/: ReadMe.md  ReadMe.txt
xm_arm_packages/: ReadMe.md  ReadMe.txt
xm_arm_packages/libfreenect2_ros_grabber/: CMakeLists.txt  README.md  package.xml
xm_arm_packages/libfreenect2_ros_grabber/src/: k2g.h  libfreenect2_ros_grabber.cpp  pointcloudPublisher.cpp.test
xm_arm_packages/xm_arm_nav/: CMakeLists.txt  package.xml
xm_arm_packages/xm_arm_nav/include/xm_arm_nav/: xm_keyboard_teleop_arm.h
xm_arm_packages/xm_arm_nav/launch/: xm_arm.launch
xm_arm_packages/xm_arm_nav/scripts/: move_arm.py  obstacles_gen.py  trial.py  xm_arm_controller_level.py  xm_arm_cv.py  xm_arm_ik_server.py  xm_arm_moveit_level.py  xm_arm_smach.py
xm_arm_packages/xm_arm_nav/src/: xm_arm_ik_server.cpp  xm_keyboard_teleop_arm.cpp  xm_pick_or_place.cpp
xm_arm_packages/xm_arm_packages/: CMakeLists.txt  package.xml
xm_arm_packages/xm_moveit_config/: .setup_assistant  CMakeLists.txt  arm_nav.rviz  package.xml  xm_moveit_log.txt
xm_arm_packages/xm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors_rgbd.yaml  xm_new_arm.srdf
xm_arm_packages/xm_moveit_config/launch/: demo.launch  (+15 more)
xm_controllers/: ReadMe.md  ReadMe.txt
xm_controllers/gripper_controller/: CMakeLists.txt  gripper_controller_plugins.xml  package.xml
xm_controllers/motor_controller/: CMakeLists.txt  motor_controller_plugins.xml  package.xml
xm_controllers/motor_controller/include/motor_controller/: motor_controller.h
xm_controllers/motor_controller/src/: motor_controller.cpp
xm_msgs/: CMakeLists.txt  README.md  README.txt  package.xml
xm_msgs/action/: xm_GripperBool.action
xm_msgs/msg/: xm_FollowPerson.msg  xm_Gesture.msg  xm_GripperCommand.msg  xm_Object.msg  xm_Person.msg  xm_Task.msg  xm_TaskArray.msg
xm_msgs/srv/: xm_FaceRecognize.srv  xm_Gripper.srv  xm_IkObtain.srv  xm_Look.srv  xm_Move.srv  xm_ObjectDetect.srv  xm_Obstacles.srv  xm_People.srv  xm_PickOrPlace.srv  xm_PickPlace.srv  xm_Plat.srv  xm_Question.srv  xm_SolveIK.srv  xm_Speak.srv  xm_Speech.srv  xm_SpeechName.srv  xm_Speech_meaning.srv  xm_gender.srv
xm_smach/: CMakeLists.txt  README.md  README.txt  package.xml  setup.py
xm_smach/launch/: trial.launch
xm_smach/scripts/: gpsr_2017.py  whoiswho_nopick.py
xm_smach/smach_log/: shopping_smach.txt  whoiswho.txt
xm_urdf/: ReadMe.md  ReadMe.txt  manifest.xml  urdf.rviz
xm_urdf/launch/: display.launch  gazebo.launch  test.launch
xm_urdf/robots/: XM_3_URDF_2.urdf  XM_URDF_1.urdf  xm_new_arm.gv  xm_new_arm.urdf
xm_velocity_smoother/: README.md  README.txt
xm_velocity_smoother/cfg/: params.cfg
xm_velocity_smoother/launch/: test_translational_smoothing.launch
xm_velocity_smoother/param/: standalone.yaml
xm_velocity_smoother/src/: velocity_smoother_nodelet.cpp
xm_velocity_smoother/test/: test_translational_input.py
xmcatkin_ws_1704/: CMakeLists.txt  package.xml
xmcatkin_ws_1704/log of xm_team/: expression_xm.txt
(+48 files in other folders)
